stupid me... should on master

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ deploy:
   github_token: $GITHUB_TOKEN
   keep_history: true
   on:
-    branch: gp-pages
+    branch: master
 
 branches:
   except:
