--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@vue/cli": "^3.11.0",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
-    "vuetify": "^2.0.0"
+    "vue-router": "^3.1.3",
+    "vuetify": "^2.0.0",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
