--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vue/cli": "^3.11.0",
     "core-js": "^2.6.5",
     "dotenv": "^8.2.0",
+    "marked": "^0.8.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuetify": "^2.0.0",
