--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-vue": "^6.2.2",
     "jest": "^24.9.0",
     "sass": "^1.17.4",
@@ -48,7 +52,8 @@
     },
     "extends": [
       "plugin:vue/essential",
-      "eslint:recommended"
+      "airbnb-base",
+      "plugin:prettier/recommended"
     ],
     "rules": {},
     "parserOptions": {
