fix no-param-reassigne by adding rule, see https://github.com/vuejs/vue-cli/issues/3954

--- a/package.json
+++ b/package.json
@@ -56,7 +56,17 @@
       "airbnb-base",
       "plugin:prettier/recommended"
     ],
-    "rules": {},
+    "rules": {
+      "no-param-reassign": [
+        "error",
+        {
+          "props": true,
+          "ignorePropertyModificationsFor": [
+            "state"
+          ]
+        }
+      ]
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     },
