--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "dotenv": "^8.2.0",
+    "lodash": "^4.17.15",
     "marked": "^0.8.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
