--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint \"src/**/*.js\" \"src/**/*.vue\" --no-fix",
     "lint:fix": "vue-cli-service lint \"src/**/*.js\" \"src/**/*.vue\"",
+	"format": "vue-cli-service lint \"src/**/*.js\" \"src/**/*.vue\"",
     "test:unit": "vue-cli-service test:unit",
     "check": "npm run lint && npm run build && echo 'check passed!'"
   },
