--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint \"src/**/*.js\" \"src/**/*.vue\" --no-fix",
     "lint:fix": "vue-cli-service lint \"src/**/*.js\" \"src/**/*.vue\"",
-	"format": "vue-cli-service lint \"src/**/*.js\" \"src/**/*.vue\"",
+    "format": "vue-cli-service lint \"src/**/*.js\" \"src/**/*.vue\"",
     "test:unit": "vue-cli-service test:unit",
     "check": "npm run lint && npm run build && echo 'check passed!'"
   },
@@ -16,9 +16,13 @@
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "dotenv": "^8.2.0",
+    "emoji-mart-vue-fast": "^7.0.1",
     "lodash": "^4.17.15",
     "marked": "^0.8.0",
+    "material-design-icons": "^3.0.1",
+    "v-click-outside": "^3.0.1",
     "vue": "^2.6.10",
+    "vue-infinite-scroll": "^2.0.2",
     "vue-router": "^3.1.3",
     "vuetify": "^2.0.0",
     "vuex": "^3.1.1",
