--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lodash": "^4.17.15",
     "marked": "^0.8.0",
     "material-design-icons": "^3.0.1",
+    "moment": "^2.24.0",
     "v-click-outside": "^3.0.1",
     "vue": "^2.6.10",
     "vue-infinite-scroll": "^2.0.2",
