--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "@vue/cli": "^3.11.0",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "dayjs": "^1.8.26",
     "dotenv": "^8.2.0",
     "emoji-mart-vue-fast": "^7.0.1",
     "lodash": "^4.17.15",
     "marked": "^0.8.0",
     "material-design-icons": "^3.0.1",
-    "moment": "^2.24.0",
     "v-click-outside": "^3.0.1",
     "vue": "^2.6.10",
     "vue-infinite-scroll": "^2.0.2",
