--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint:fix": "vue-cli-service lint \"src/**/*.js\" \"src/**/*.vue\"",
     "format": "vue-cli-service lint \"src/**/*.js\" \"src/**/*.vue\"",
     "test:unit": "vue-cli-service test:unit",
-    "check": "npm run lint && npm run build && echo 'check passed!'"
+    "check": "npm run lint && npm run build && echo 'check passed!'",
+    "update-public-data": "cd public && wget https://github.com/fudan-today/today.backend/releases/download/public_data/public_data.tar && tar -xvf public_data.tar && rm public_data.tar && cd .."
   },
   "dependencies": {
     "@vue/cli": "^3.11.0",
