--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "update-public-data": "cd public && wget https://github.com/fudan-today/today.backend/releases/download/public_data/public_data.tar && tar -xvf public_data.tar && rm public_data.tar && cd .."
   },
   "dependencies": {
+    "@toast-ui/vue-editor": "^2.1.2",
     "@vue/cli": "^3.11.0",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
