--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@toast-ui/editor": "^2.1.2",
+    "@toast-ui/editor-plugin-code-syntax-highlight": "^1.0.0",
     "@toast-ui/vue-editor": "^2.1.2",
     "@vue/cli": "^3.11.0",
     "axios": "^0.19.0",
@@ -22,6 +23,7 @@
     "dayjs": "^1.8.26",
     "dotenv": "^8.2.0",
     "emoji-mart-vue-fast": "^7.0.1",
+    "highlight.js": "^10.0.3",
     "lodash": "^4.17.15",
     "marked": "^0.8.0",
     "v-click-outside": "^3.0.1",
