--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.1",
-    "@vue/cli-plugin-eslint": "^3.12.1",
+    "@vue/cli-plugin-eslint": "^4.5.6",
     "@vue/cli-plugin-unit-jest": "^3.12.1",
     "@vue/cli-service": "^3.12.1",
     "@vue/test-utils": "1.0.0-beta.29",
@@ -55,6 +55,7 @@
     "sass": "^1.26.10",
     "sass-loader": "^7.3.1",
     "vue-cli-plugin-vuetify": "^0.6.3",
+    "vue-eslint-parser": "^7.1.0",
     "vue-template-compiler": "^2.6.12",
     "vuetify-loader": "^1.6.0"
   },
