--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,9 @@ jobs:
     - run: echo 'VUE_APP_API_URL=https://dev.fudan.today/api' > .env.production
     - run: npm run update-public-data
     - run: npm run build --if-present
-    - run: echo '{{ secrets.FDXK_SSH_PRIVATE_KEY }}' > ~/.ssh/id_rsa
+    - run: |
+        mkdir ~/.ssh
+        echo '{{ secrets.FDXK_SSH_PRIVATE_KEY }}' > ~/.ssh/id_rsa
     - run: |
         cd dist
         git init . 
