--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,9 @@ jobs:
     - run: npm run build --if-present
     - run: |
         mkdir ~/.ssh
+        chmod 700 ~/.ssh
         echo '{{ secrets.FDXK_SSH_PRIVATE_KEY }}' > ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/id_rsa
     - run: |
         cd dist
         git init . 
