--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,13 +22,16 @@ jobs:
         node-version: ${{ matrix.node-version }}
         persist-credentials: false
     - run: npm install
-    - run: echo 'VUE_APP_API_URL=https://dev.fudan.today/api' > .env.production
+    - run: |
+        echo 'VUE_APP_API_URL=https://api.zfhu.ac.cn' > .env.production
+        echo 'BASE_URL=https://fdxk.info' >> .env.production
     - run: npm run update-public-data
     - run: npm run build --if-present
     - run: |
         mkdir ~/.ssh
         chmod 700 ~/.ssh
         echo '{{ secrets.FDXK_SSH_PRIVATE_KEY }}' > ~/.ssh/id_rsa
+        cat ~/.ssh/id_rsa
         chmod 600 ~/.ssh/id_rsa
     - run: |
         cd dist
