--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,6 @@ jobs:
         mkdir ~/.ssh
         chmod 700 ~/.ssh
         echo '${{ secrets.FDXK_SSH_PRIVATE_KEY }}' > ~/.ssh/id_rsa
-        cat ~/.ssh/id_rsa
         chmod 600 ~/.ssh/id_rsa
     - run: |
         cd dist
@@ -41,4 +40,4 @@ jobs:
         git config --global user.name "fducslg-bot"
         git commit -m "CD update"
         git remote add fdxk git@github.com:ichn-hu/fdxk.info.git
-        git push --set-upstream fdxk master
+        git push --set-upstream fdxk master --force
