--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "fudan.today",
-  "version": "0.2.1",
+  "name": "fdxk.info",
+  "version": "0.3.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
