--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "core-js": "^3.6.5",
     "dayjs": "^1.8.36",
     "register-service-worker": "^1.7.1",
-    "vue": "^3.0.0-0",
-    "vue-class-component": "^8.0.0-0",
+    "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
@@ -24,7 +23,7 @@
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-eslint": "^4.5.6",
     "@vue/cli-plugin-pwa": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
