--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -17,10 +17,10 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm install
-    - run: npm run lint
-    - run: npm run build --if-present
-#     - run: npm test
+    - run: yarn install
+    - run: yarn run lint
+    - run: yarn run build --if-present
+#     - run: yarn test
 #       env:
 #         CI: true
   
