--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,4 +7,8 @@
   "eslint.validate": [
     "typescript"
   ],
+  "eslint.format.enable": true,
+  "editor.codeActionsOnSave": {
+      "source.fixAll.eslint": true
+  },
 }
