build(eslint): minor

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,9 @@
   ],
   "eslint.nodePath": "../node_modules",
   "eslint.validate": [
-    "typescript"
+    "typescript",
+    "javascript",
+    "javascriptreact"
   ],
   "eslint.format.enable": true,
   "editor.codeActionsOnSave": {
