feat(api): 接入 users API & 引入 JWT 拦截器

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,8 @@
     "fudan",
     "hoverable",
     "linebreak",
-    "scripthost"
+    "scripthost",
+    "watchees"
   ],
   "eslint.nodePath": "../node_modules",
   "eslint.validate": [
