--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "vue-cli-service lint --no-fix",
     "check": "yarn lint && yarn build && echo 'check passed!'",
     "format": "vue-cli-service lint",
-    "update-public-data": "cd public && wget https://github.com/fudan-today/today.backend/releases/download/public_data/public_data.tar && tar -xvf public_data.tar && rm public_data.tar && cd .."
+    "update-public-data": "cd public && curl -O https://github.com/fudan-today/today.backend/releases/download/public_data/public_data.tar && tar -xvf public_data.tar && rm public_data.tar && cd .."
   },
   "dependencies": {
     "ant-design-vue": "^2.0.0-beta.10",
