--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint --no-fix",
     "check": "yarn lint && yarn build && echo 'check passed!'",
-    "format": "vue-cli-service lint",
-    "update-public-data": "cd public && curl -O -L https://github.com/fudan-today/today.backend/releases/download/public_data/public_data.tar && tar -xvf public_data.tar && rm public_data.tar && cd .."
+    "format": "vue-cli-service lint"
   },
   "dependencies": {
     "ant-design-vue": "^2.0.0-beta.10",
