--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.4.0",
   "private": true,
   "scripts": {
+    "dev": "vue-cli-service serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint --no-fix",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.12.1",
+    "@tailwindcss/postcss7-compat": "^2.0.3",
     "@types/lodash.debounce": "^4.0.6",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
@@ -35,15 +37,18 @@
     "@vue/compiler-sfc": "^3.0.2",
     "@vue/eslint-config-airbnb": "^5.1.0",
     "@vue/eslint-config-typescript": "^7.0.0",
+    "autoprefixer": "^9",
     "babel-plugin-import": "^1.13.1",
     "eslint": "^7.12.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-vue": "^7.1.0",
+    "less-loader": "6",
+    "postcss": "^7",
     "prettier": "^2.1.2",
     "sass": "^1.27.0",
     "sass-loader": "^8.0.2",
     "sass-resources-loader": "^2.1.1",
-    "less-loader": "6",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "typescript": "~3.9.3"
   }
 }
