--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,8 +14,9 @@
   "eslint.nodePath": "../node_modules",
   "eslint.validate": [
     "typescript",
+    "typescriptreact",
     "javascript",
-    "javascriptreact"
+    "javascriptreact",
   ],
   "eslint.format.enable": true,
   "editor.codeActionsOnSave": {
