build(tailwind): introduce all colors

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
     "hoverable",
     "linebreak",
     "scripthost",
+    "tailwindcss",
     "watchees"
   ],
   "eslint.nodePath": "../node_modules",
