--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint": "^7.12.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-vue": "^7.1.0",
+    "jbox": "^1.2.13",
     "less-loader": "6",
     "postcss": "^7",
     "prettier": "^2.1.2",
