--- a/package.json
+++ b/package.json
@@ -11,39 +11,39 @@
   },
   "dependencies": {
     "ant-design-vue": "^2.0.0-beta.10",
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "dayjs": "^1.9.4",
+    "dayjs": "^1.10.4",
     "lodash.debounce": "^4.0.8",
-    "register-service-worker": "^1.7.1",
-    "vue": "^3.0.2",
-    "vue-router": "^4.0.0-rc.1",
-    "vuex": "^4.0.0-beta.4"
+    "register-service-worker": "^1.7.2",
+    "vue": "^3.0.7",
+    "vue-router": "^4.0.5",
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-optional-chaining": "^7.12.1",
+    "@babel/plugin-proposal-optional-chaining": "^7.13.8",
     "@tailwindcss/postcss7-compat": "^2.0.3",
     "@types/lodash.debounce": "^4.0.6",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
-    "@vue/cli-plugin-babel": "^4.5.8",
-    "@vue/cli-plugin-eslint": "^4.5.8",
-    "@vue/cli-plugin-pwa": "^4.5.8",
-    "@vue/cli-plugin-router": "^4.5.8",
-    "@vue/cli-plugin-typescript": "^4.5.8",
-    "@vue/cli-plugin-vuex": "^4.5.8",
-    "@vue/cli-service": "^4.5.8",
-    "@vue/compiler-sfc": "^3.0.2",
-    "@vue/eslint-config-airbnb": "^5.1.0",
+    "@vue/cli-plugin-babel": "^4.5.11",
+    "@vue/cli-plugin-eslint": "^4.5.11",
+    "@vue/cli-plugin-pwa": "^4.5.11",
+    "@vue/cli-plugin-router": "^4.5.11",
+    "@vue/cli-plugin-typescript": "^4.5.11",
+    "@vue/cli-plugin-vuex": "^4.5.11",
+    "@vue/cli-service": "^4.5.11",
+    "@vue/compiler-sfc": "^3.0.7",
+    "@vue/eslint-config-airbnb": "^5.3.0",
     "@vue/eslint-config-typescript": "^7.0.0",
     "autoprefixer": "^9",
-    "babel-plugin-import": "^1.13.1",
-    "eslint": "^7.12.0",
+    "babel-plugin-import": "^1.13.3",
+    "eslint": "^7.22.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-vue": "^7.1.0",
+    "eslint-plugin-vue": "^7.7.0",
     "less-loader": "6",
     "postcss": "^7",
-    "prettier": "^2.1.2",
+    "prettier": "^2.2.1",
     "sass": "^1.27.0",
     "sass-loader": "^8.0.2",
     "sass-resources-loader": "^2.1.1",
