--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -19,7 +19,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: yarn install
     - run: yarn run lint
-    - run: yarn run build --if-present
+    # - run: yarn run build --if-present
 #     - run: yarn test
 #       env:
 #         CI: true
