--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.13.8",
+    "@commitlint/cli": "^12.1.1",
+    "@commitlint/config-conventional": "^12.1.1",
     "@tailwindcss/postcss7-compat": "^2.0.3",
     "@types/lodash.debounce": "^4.0.6",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
@@ -41,6 +43,7 @@
     "eslint": "^7.22.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-vue": "^7.7.0",
+    "husky": "^6.0.0",
     "less-loader": "6",
     "postcss": "^7",
     "prettier": "^2.2.1",
