--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint --no-fix",
     "check": "yarn lint && yarn build && echo 'check passed!'",
-    "format": "vue-cli-service lint"
+    "format": "vue-cli-service lint",
+    "prepare": "husky install"
   },
   "dependencies": {
     "ant-design-vue": "^2.0.0-beta.10",
