--- a/package.json
+++ b/package.json
@@ -7,51 +7,51 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint --no-fix",
     "check": "yarn lint && yarn build && echo 'check passed!'",
-    "format": "vue-cli-service lint",
-    "prepare": "husky install"
+    "format": "vue-cli-service lint"
   },
   "dependencies": {
     "ant-design-vue": "^2.0.0-beta.10",
-    "axios": "^0.21.2",
+    "axios": "^0.22.0",
     "core-js": "^3.6.5",
-    "dayjs": "^1.10.4",
+    "dayjs": "^1.10.7",
     "lodash.debounce": "^4.0.8",
     "register-service-worker": "^1.7.2",
-    "vue": "^3.0.7",
-    "vue-router": "^4.0.5",
-    "vuex": "^4.0.0"
+    "vue": "^3.2.19",
+    "vue-router": "^4.0.11",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-optional-chaining": "^7.13.8",
-    "@commitlint/cli": "^12.1.1",
-    "@commitlint/config-conventional": "^12.1.1",
-    "@tailwindcss/postcss7-compat": "^2.0.3",
+    "@commitlint/cli": "^13.2.0",
+    "@commitlint/config-conventional": "^13.2.0",
+    "@tailwindcss/postcss7-compat": "^2.2.16",
     "@types/lodash.debounce": "^4.0.6",
-    "@typescript-eslint/eslint-plugin": "^4.5.0",
-    "@typescript-eslint/parser": "^4.5.0",
-    "@vue/cli-plugin-babel": "^4.5.11",
-    "@vue/cli-plugin-eslint": "^4.5.11",
-    "@vue/cli-plugin-pwa": "^4.5.11",
-    "@vue/cli-plugin-router": "^4.5.11",
-    "@vue/cli-plugin-typescript": "^4.5.11",
-    "@vue/cli-plugin-vuex": "^4.5.11",
-    "@vue/cli-service": "^4.5.11",
-    "@vue/compiler-sfc": "^3.0.7",
+    "@typescript-eslint/eslint-plugin": "^4.32.0",
+    "@typescript-eslint/parser": "^4.32.0",
+    "@vue/cli-plugin-babel": "^4.5.13",
+    "@vue/cli-plugin-eslint": "^4.5.13",
+    "@vue/cli-plugin-pwa": "^4.5.13",
+    "@vue/cli-plugin-router": "^4.5.13",
+    "@vue/cli-plugin-typescript": "^4.5.13",
+    "@vue/cli-plugin-vuex": "^4.5.13",
+    "@vue/cli-service": "^4.5.13",
+    "@vue/compiler-sfc": "^3.2.19",
     "@vue/eslint-config-airbnb": "^5.3.0",
     "@vue/eslint-config-typescript": "^7.0.0",
     "autoprefixer": "^9",
     "babel-plugin-import": "^1.13.3",
-    "eslint": "^7.22.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-vue": "^7.7.0",
-    "husky": "^6.0.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-vue": "^7.18.0",
     "less-loader": "6",
     "postcss": "^7",
-    "prettier": "^2.2.1",
+    "prettier": "^2.4.1",
     "sass": "^1.27.0",
     "sass-loader": "^8.0.2",
     "sass-resources-loader": "^2.1.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "typescript": "~3.9.3"
+    "typescript": "~4.1.5"
+  },
+  "gitHooks": {
+    "commit-msg": "commitlint --edit $GIT_PARAMS"
   }
 }
