--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "scripts": {
     "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint --no-fix",
-    "check": "yarn lint && yarn build && echo 'check passed!'",
-    "format": "vue-cli-service lint"
+    "lint": "vue-cli-service lint --fix",
+    "check": "yarn lint && yarn build && echo 'check passed!'"
   },
   "dependencies": {
     "ant-design-vue": "^2.0.0-beta.10",
-    "axios": "^0.22.0",
+    "axios": "0.21.2",
     "core-js": "^3.6.5",
     "dayjs": "^1.10.7",
     "lodash.debounce": "^4.0.8",
